--- a/ImprovedUI/Public/Game/GUI/Widgets/CharacterLevelUp_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/CharacterLevelUp_c.xaml
@@ -787,7 +787,7 @@ ConverterParameter=0}" Value="True"/>
 
                                                 <TextBlock x:Name="classPanelTitleText" ls:TextBlockFormatter.SourceText="{Binding Source=he3ccedd0gceaeg4b1fg8e74g9dfc6da58cd2, Converter={StaticResource TranslatedStringConverter}}" Style="{StaticResource PanelHeaderText}"/>
 
-                                                <ListBox x:Name="multiClassCarousel" Template="{StaticResource IconCarouselTemplate}" ItemsSource="{Binding FilteredItems, ElementName=CurrentMultiClasses}" SelectedItem="{Binding SelectedMultiClass}">
+                                                <ListBox x:Name="multiClassCarousel" Style="{StaticResource IconCarouselStyle}" ItemsSource="{Binding FilteredItems, ElementName=CurrentMultiClasses}" SelectedItem="{Binding SelectedMultiClass}">
                                                     <ListBox.Resources>
 
                                                         <ControlTemplate x:Key="IconsSubtitleTemplate">
