--- a/ImprovedUI/Public/Game/GUI/StateMachine.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine.xaml
@@ -345,6 +345,16 @@
 						<ls:AddSubstate Name="PinnedTooltips"/>
 					</ls:StateEvent.Actions>
 				</ls:StateEvent>
+				<ls:StateEvent Name = "GE.OnDialogueShow">
+					<ls:StateEvent.Actions>
+						<ls:AddSubstate Name="Dialogue"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
+				<ls:StateEvent Name = "PreloadDialogue">
+					<ls:StateEvent.Actions>
+						<ls:PreloadState Name="Dialogue"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
 			</ls:State.Events>
 		</ls:State>
 
