--- a/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
+++ b/ImprovedUI/Public/Game/GUI/Widgets/CharacterCreation.xaml
@@ -518,7 +518,7 @@
 											<TextBlock ls:TextBlockFormatter.SourceText="{Binding Source=h6020727bge0e3g4de7gaf3ag469c3b32b3d2, Converter={StaticResource TranslatedStringConverter}}" Style="{StaticResource PanelHeaderText}"/>
 
 											<!-- MOD START - Two scroll viewers to support multiple modded race selection -->
-											<ls:LSScrollViewer Style="{StaticResource gameplayPanelScrollViewerStyle}" MaxHeight="770" VerticalScrollBarVisibility="Auto">
+											<ls:LSScrollViewer Style="{StaticResource gameplayPanelScrollViewerStyle}" MaxHeight="770" Height="Auto" VerticalScrollBarVisibility="Auto">
 												<StackPanel Style="{StaticResource gameplayScrolledStackPanelStyle}">
 
 													<ListBox ItemTemplate="{StaticResource CustomIconTemplate}" ItemsSource="{Binding SelectableRaces}" SelectedItem="{Binding SelectedRace}" ItemContainerStyle="{StaticResource CCIconTextListBoxItemStyle}" Style="{StaticResource gameplayIconGridStyle}">
