--- a/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
+++ b/ImprovedUI/Public/Game/GUI/StateMachine_c.xaml
@@ -1114,6 +1114,11 @@
 						<ls:AddSubstate Name="PinnedTooltips"/>
 					</ls:StateEvent.Actions>
 				</ls:StateEvent>
+				<ls:StateEvent Name = "OpenMessageBox">
+					<ls:StateEvent.Actions>
+						<ls:AddSubstate Name="MessageBox"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
 			</ls:State.Events>
 		</ls:State>
 
@@ -2115,6 +2120,7 @@
 		<!--STATE: MainMenu.LoadGame-->
 		<ls:State Name = "MainMenu.LoadGame" DisableStatesBelow = "True" Layout = "Common" Owner = "All">
 			<ls:State.Widgets>
+				<ls:StateWidget Filename="AlwaysOnTopOverlay.xaml" Layer="MessageBox"/>
 				<ls:StateWidget Filename="ScreenFade.xaml" Layer="ScreenFade" BlockedLoading="True"/>
 				<ls:StateWidget Filename="LoadGame_c.xaml" Layer="Pause"/>
 			</ls:State.Widgets>
@@ -2342,6 +2348,11 @@
 						<ls:AddSubstate Name="PinnedTooltips"/>
 					</ls:StateEvent.Actions>
 				</ls:StateEvent>
+				<ls:StateEvent Name = "OpenMessageBox">
+					<ls:StateEvent.Actions>
+						<ls:AddSubstate Name="MessageBox"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
 			</ls:State.Events>
 		</ls:State>
 
@@ -2369,6 +2380,11 @@
 				<ls:StateEvent Name = "OpenPinnedTooltips">
 					<ls:StateEvent.Actions>
 						<ls:AddSubstate Name="PinnedTooltips"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
+				<ls:StateEvent Name = "OpenMessageBox">
+					<ls:StateEvent.Actions>
+						<ls:AddSubstate Name="MessageBox"/>
 					</ls:StateEvent.Actions>
 				</ls:StateEvent>
 			</ls:State.Events>
@@ -2606,6 +2622,11 @@
 				<ls:StateEvent Name = "OpenPinnedTooltips">
 					<ls:StateEvent.Actions>
 						<ls:AddSubstate Name="PinnedTooltips"/>
+					</ls:StateEvent.Actions>
+				</ls:StateEvent>
+				<ls:StateEvent Name = "OpenMessageBox">
+					<ls:StateEvent.Actions>
+						<ls:AddSubstate Name="MessageBox"/>
 					</ls:StateEvent.Actions>
 				</ls:StateEvent>
 			</ls:State.Events>
